[gd_scene load_steps=10 format=2]

[ext_resource path="res://producto/assets/img/Plataformas/Objects/Obj-Moving-Platform-Idle-48x28.png" type="Texture" id=1]
[ext_resource path="res://producto/scripts/PlataformaMovil.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 72.5498, 10 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 56, 48, 28 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 28 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 28 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 28, 48, 28 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 48, 28, 48, 28 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Move_right",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Move_left",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]

[node name="Plataforma" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="ColisionPlataforma" type="CollisionShape2D" parent="Plataforma"]
position = Vector2( 409.087, 173.624 )
shape = SubResource( 8 )

[node name="SpritePlataforma" type="AnimatedSprite" parent="Plataforma/ColisionPlataforma"]
position = Vector2( 0, 2.37842 )
scale = Vector2( 3, 3 )
frames = SubResource( 7 )
animation = "Idle"

[node name="Button" type="Button" parent="."]
margin_left = 32.2978
margin_top = 25.2398
margin_right = 387.298
margin_bottom = 143.24
rect_scale = Vector2( 0.33, 0.33 )
text = "Boton"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="Plataforma" method="_on_Button_pressed"]
